package com.store_inventory.pages;

public interface NavigationHandler {
  void navigate(String destination);
  void logout();
}
